--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "test": "grunt test"
   },
   "devDependencies": {
+    "angular-arithmetic": "1.0.1",
     "angular-mocks": "1.6.4",
     "babel-preset-es2015": "6.24.1",
     "babelify": "7.3.0",
@@ -29,7 +30,8 @@
     "stringify": "5.1.0"
   },
   "dependencies": {
-    "angular": "1.6.4"
+    "angular": "1.6.4",
+    "angular-arithmetic": "1.0.1"
   },
   "name": "angular-parentchild",
   "description": "A components parent/child organisation in AngularJS",
